<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#728BC34A"
    tools:context=".AddEditActivityFragment">

    <Button
        android:id="@+id/addedit_btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:drawableLeft="@android:drawable/ic_menu_save"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addedit_description" />

    <EditText
        android:id="@+id/addedit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/task_name_required"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:maxLength="64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addedit_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/task_description_required"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:maxLength="256"
        app:layout_constraintEnd_toEndOf="@+id/addedit_name"
        app:layout_constraintStart_toStartOf="@+id/addedit_name"
        app:layout_constraintTop_toBottomOf="@+id/addedit_name" />


    <EditText
        android:id="@+id/addedit_sortorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/sortorder"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintEnd_toStartOf="@+id/addedit_btn_save"
        app:layout_constraintStart_toStartOf="@+id/addedit_description"
        app:layout_constraintTop_toTopOf="@+id/addedit_btn_save" />


</androidx.constraintlayout.widget.ConstraintLayout>